fix(core): include LobChunk in safe classes list to prevent serialization issues
chore(tests): improve readability and clean up test code

chore(deps): upgrade dependencies to address security vulnerabilities

fix(core): add Jackson dependencies to JDBC native driver to fix missing class exceptions