@@ -26,7 +26,6 @@ import com.kubling.teiid.core.TeiidProcessingException;
 import com.kubling.teiid.core.types.DataTypeManager;
 import com.kubling.teiid.core.util.TimestampWithTimezone;
 import com.kubling.teiid.query.unittest.TimestampUtil;
-import net.jcip.annotations.NotThreadSafe;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentMatchers;
@@ -42,7 +41,6 @@ import java.util.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-@NotThreadSafe
 public class TestAllResultsImpl {
 
     static final long REQUEST_ID = 0;
@@ -56,7 +54,9 @@ public class TestAllResultsImpl {
         statement = TestResultSet.createMockStatement(TYPE_SCROLL_SENSITIVE);
     }
 
-    /** test hasNext(), actual result set should return FALSE. */
+    /**
+     * test hasNext(), actual result set should return FALSE.
+     */
     @Test
     public void testHasNext1() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg1(),
@@ -72,9 +72,12 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    /** test hasNext(), actual result set should return TRUE. */
-    @Test public void testHasNext2() throws Exception {
-        List[] results = exampleResults1(5);
+    /**
+     * test hasNext(), actual result set should return TRUE.
+     */
+    @Test
+    public void testHasNext2() throws Exception {
+        List<?>[] results = exampleResults1(5);
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg1(),
                 statement);
 
@@ -93,7 +96,8 @@ public class TestAllResultsImpl {
      * test next(), whether the result set's cursor is positioned on next row or
      * not
      */
-    @Test public void testNext1() throws Exception {
+    @Test
+    public void testNext1() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg1(),
                 statement);
 
@@ -105,17 +109,20 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    /** test next(), walk through all rows of a result set and compare each row. */
-    @Test public void testNext2() throws Exception {
-        List[] results = exampleResults1(5);
+    /**
+     * test next(), walk through all rows of a result set and compare each row.
+     */
+    @Test
+    public void testNext2() throws Exception {
+        List<?>[] results = exampleResults1(5);
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg1(),
                 statement);
 
         int i = 0;
         while (rs.next()) {
             // walk through and compare
-            List actual = rs.getCurrentRecord();
-            List expected = results[i];
+            List<?> actual = rs.getCurrentRecord();
+            List<?> expected = results[i];
             assertEquals(expected, actual);
             i++;
         }
@@ -123,8 +130,11 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    /** test next(), get result set and close without walking through */
-    @Test public void testNext3() throws Exception {
+    /**
+     * test next(), get result set and close without walking through
+     */
+    @Test
+    public void testNext3() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg1(),
                 statement);
         assertEquals(Integer.valueOf(0), Integer.valueOf(rs.getRow()));
@@ -132,24 +142,30 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    /** test next(), walk through partial rows of a result set */
-    @Test public void testNext4() throws Exception {
-        List[] results = exampleResults1(5);
+    /**
+     * test next(), walk through partial rows of a result set
+     */
+    @Test
+    public void testNext4() throws Exception {
+        List<?>[] results = exampleResults1(5);
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg1(),
                 statement);
 
         for (int i = 0; i < results.length - 1; i++) {
             rs.next();
-            List actual = rs.getCurrentRecord();
-            List expected = results[i];
+            List<?> actual = rs.getCurrentRecord();
+            List<?> expected = results[i];
             assertEquals(expected, actual);
         }
 
         rs.close();
     }
 
-    /** test next(), when hasNext() == false */
-    @Test public void testNext5() throws Exception {
+    /**
+     * test next(), when hasNext() == false
+     */
+    @Test
+    public void testNext5() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg1(),
                 statement);
         while (rs.next()) {
@@ -163,9 +179,12 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    /** test getObject() at columnIndex = 2 of 5th row */
-    @Test public void testGetObject1() throws Exception {
-        List[] results = exampleResults2();
+    /**
+     * test getObject() at columnIndex = 2 of 5th row
+     */
+    @Test
+    public void testGetObject1() throws Exception {
+        List<?>[] results = exampleResults2();
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg2a(),
                 statement);
 
@@ -187,8 +206,11 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    /** Should fail, test getObject() at wrong columnIndex */
-    @Test public void testGetObject2() throws Exception {
+    /**
+     * Should fail, test getObject() at wrong columnIndex
+     */
+    @Test
+    public void testGetObject2() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg2a(),
                 statement);
 
@@ -198,16 +220,15 @@ public class TestAllResultsImpl {
             try {
                 rs.getObject(6);
             } catch (Exception e) {
-                if (e instanceof IllegalArgumentException) {
-                    // OK
-                }
+                // OK
             }
         }
 
         rs.close();
     }
 
-    @Test public void testGetRow() throws Exception {
+    @Test
+    public void testGetRow() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg2(),
                 statement);
 
@@ -222,8 +243,9 @@ public class TestAllResultsImpl {
 
     }
 
-    @Test public void testPrevious() throws Exception {
-        List[] results = exampleResults1(5);
+    @Test
+    public void testPrevious() throws Exception {
+        List<?>[] results = exampleResults1(5);
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg1(),
                 statement);
 
@@ -234,8 +256,8 @@ public class TestAllResultsImpl {
         // walk reversely;
         int i = results.length - 1;
         while (rs.previous()) {
-            List expected = new ArrayList(1);
-            expected.add(Integer.valueOf(i + 1));
+            List<Integer> expected = new ArrayList<>(1);
+            expected.add(i + 1);
             assertEquals(expected, rs.getCurrentRecord());
             i--;
         }
@@ -243,18 +265,20 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    @Test public void testGetCurrentRecord() throws Exception {
-        List[] results = exampleResults2();
+    @Test
+    public void testGetCurrentRecord() throws Exception {
+        List<?>[] results = exampleResults2();
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg2(),
                 statement);
 
         rs.next();
-        List actual = rs.getCurrentRecord();
+        List<?> actual = rs.getCurrentRecord();
         assertEquals(results[0], actual);
         rs.close();
     }
 
-    @Test public void testGetMetaData() throws Exception {
+    @Test
+    public void testGetMetaData() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg2a(),
                 statement);
         ResultSetMetaData rmetadata = rs.getMetaData();
@@ -269,20 +293,23 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    @Test public void testResultsWarnings() throws Exception {
+    @Test
+    public void testResultsWarnings() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg2(),
                 statement);
         rs.close();
     }
 
-    @Test public void testClose() throws Exception {
+    @Test
+    public void testClose() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg2(),
                 statement);
         rs.close();
         verify(statement, times(0)).close();
     }
 
-    @Test public void testGetFetchSize() throws Exception {
+    @Test
+    public void testGetFetchSize() throws Exception {
         StatementImpl s = Mockito.mock(StatementImpl.class);
         when(s.getFetchSize()).thenReturn(500);
         ConnectionImpl c = Mockito.mock(ConnectionImpl.class);
@@ -304,81 +331,87 @@ public class TestAllResultsImpl {
 
     // //////////////////////Functions refer to ResultSet's TYPE_FORWARD_ONLY///
     // /////////////////
-    @Test public void testIsAfterLast1() throws Exception {
-        ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY);
-        assertThrows(SQLException.class, () -> rs.last());
+    @Test
+    public void testIsAfterLast1() throws Exception {
+        try (ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY)) {
+            assertThrows(SQLException.class, rs::last);
+        }
     }
 
-    @Test public void testAfterLast1() throws Exception {
-        ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY);
-        assertThrows(SQLException.class, () -> rs.afterLast());
+    @Test
+    public void testAfterLast1() throws Exception {
+        try (ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY)) {
+            assertThrows(SQLException.class, rs::afterLast);
+        }
     }
 
-    @Test public void testIsBeforeFirst1() throws Exception {
+    @Test
+    public void testIsBeforeFirst1() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY);
-
         // right before the first row
         boolean actual = rs.isBeforeFirst();
-        assertEquals(true, actual);
+        assertTrue(actual);
         rs.close();
     }
 
-    @Test public void testIsBeforeFirst2() throws Exception {
+    @Test
+    public void testIsBeforeFirst2() throws Exception {
         ResultSetImpl rs = helpGetNoResults(TYPE_FORWARD_ONLY);
 
         // right before the first row
         boolean actual = rs.isBeforeFirst();
-        assertEquals(false, actual);
+        assertFalse(actual);
         rs.close();
     }
 
-    @Test public void testBeforeFirst1() throws Exception {
-        ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY);
-
-        // move cursor to the first row
-        rs.next();
-
-        // move back to before first row
-        assertThrows(SQLException.class, () -> rs.beforeFirst());
+    @Test
+    public void testBeforeFirst1() throws Exception {
+        try (ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY)) {
+            rs.next();
+            assertThrows(SQLException.class, rs::beforeFirst);
+        }
     }
 
-    @Test public void testIsFirst1() throws Exception {
+    @Test
+    public void testIsFirst1() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY);
 
         // move cursor to the first row
         rs.next();
         boolean actual = rs.isFirst();
-        assertEquals(true, actual);
+        assertTrue(actual);
         rs.close();
     }
 
-    @Test public void testIsFirst2() throws Exception {
+    @Test
+    public void testIsFirst2() throws Exception {
         ResultSetImpl rs = helpGetNoResults(TYPE_FORWARD_ONLY);
 
         // move cursor to the first row
         rs.next();
         boolean actual = rs.isFirst();
-        assertEquals(false, actual);
+        assertFalse(actual);
         rs.close();
     }
 
-    @Test public void testFirst1() throws Exception {
-        ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY);
-
-        // move cursor to the first row
-        rs.next();
-        assertThrows(SQLException.class, () -> rs.first());
+    @Test
+    public void testFirst1() throws Exception {
+        try (ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY)) {
+            rs.next();
+            assertThrows(SQLException.class, rs::first);
+        }
     }
 
-    @Test public void testFirst2() throws Exception {
-        ResultSetImpl rs = helpGetNoResults(TYPE_FORWARD_ONLY);
-
-        // move cursor to the first row
-        rs.next();
-        assertThrows(SQLException.class, () -> rs.first());
+    @Test
+    public void testFirst2() throws Exception {
+        try (ResultSetImpl rs = helpGetNoResults(TYPE_FORWARD_ONLY)) {
+            rs.next();
+            assertThrows(SQLException.class, rs::first);
+        }
     }
 
-    @Test public void testFindColumn() throws Exception {
+    @Test
+    public void testFindColumn() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg2a(),
                 statement);
 
@@ -386,29 +419,31 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    @Test public void testIsLast1() throws Exception {
-        ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY);
-
-        // move cursor to the last row
-        boolean actual = rs.isLast();
-        assertEquals(false, actual);
+    @Test
+    public void testIsLast1() throws Exception {
+        try (ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY)) {
+            boolean actual = rs.isLast();
+            assertFalse(actual);
+        }
     }
 
-    @Test public void testIsLast2() throws Exception {
-        ResultSetImpl rs = helpGetNoResults(TYPE_FORWARD_ONLY);
-
-        // move cursor to the last row
-        boolean actual = rs.isLast();
-        assertEquals(false, actual);
+    @Test
+    public void testIsLast2() throws Exception {
+        try (ResultSetImpl rs = helpGetNoResults(TYPE_FORWARD_ONLY)) {
+            boolean actual = rs.isLast();
+            assertFalse(actual);
+        }
     }
 
-    @Test public void testLast1() throws Exception {
-        ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY);
-
-        assertThrows(SQLException.class, () -> rs.last());
+    @Test
+    public void testLast1() throws Exception {
+        try (ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY)) {
+            assertThrows(SQLException.class, rs::last);
+        }
     }
 
-    @Test public void testRelative1() throws Exception {
+    @Test
+    public void testRelative1() throws Exception {
         ResultSetImpl rs = new ResultSetImpl(exampleResultsMsg2(),
                 statement);
 
@@ -416,25 +451,27 @@ public class TestAllResultsImpl {
         rs.next();
         // move to 2nd row
         boolean actual = rs.relative(1);
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(2, rs.getRow());
 
         actual = rs.relative(-1);
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(1, rs.getRow());
         rs.close();
     }
 
-    @Test public void testAbsolute1() throws Exception {
-        ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY);
-
-        assertThrows(SQLException.class, () -> rs.absolute(1));
+    @Test
+    public void testAbsolute1() throws Exception {
+        try (ResultSetImpl rs = helpGetResultSetImpl(TYPE_FORWARD_ONLY)) {
+            assertThrows(SQLException.class, () -> rs.absolute(1));
+        }
     }
 
     // //////////Functions refer to other types other than ResultSet's
     // TYPE_FORWARD_ONLY//////
 
-    @Test public void testAfterLast1a() throws Exception {
+    @Test
+    public void testAfterLast1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // move cursor right past the last row
@@ -445,31 +482,34 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    @Test public void testIsAfterLast1a() throws Exception {
+    @Test
+    public void testIsAfterLast1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // the last row
         rs.last();
         boolean actual = rs.isAfterLast();
-        assertEquals(false, actual);
+        assertFalse(actual);
 
         // move after the last row
         rs.next();
         actual = rs.isAfterLast();
-        assertEquals(true, actual);
+        assertTrue(actual);
         rs.close();
     }
 
-    @Test public void testIsBeforeFirst1a() throws Exception {
+    @Test
+    public void testIsBeforeFirst1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // right before the first row
         boolean actual = rs.isBeforeFirst();
-        assertEquals(true, actual);
+        assertTrue(actual);
         rs.close();
     }
 
-    @Test public void testBeforeFirst1a() throws Exception {
+    @Test
+    public void testBeforeFirst1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // move cursor to the first row
@@ -483,68 +523,75 @@ public class TestAllResultsImpl {
         rs.close();
     }
 
-    @Test public void testIsFirst1a() throws Exception {
+    @Test
+    public void testIsFirst1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // move cursor to the first row
         rs.next();
         boolean actual = rs.isFirst();
-        assertEquals(true, actual);
+        assertTrue(actual);
 
         // check row number
         assertEquals(1, rs.getRow());
         rs.close();
     }
 
-    @Test public void testFirst1a() throws Exception {
+    @Test
+    public void testFirst1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // move cursor to the first row
         boolean actual = rs.first();
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(1, rs.getRow());
 
         // move cursor to the first row starting from the last row
         rs.afterLast();
         actual = rs.first();
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(1, rs.getRow());
 
         // move cursor to the first row from random number;
         rs.absolute(3);
         actual = rs.first();
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(1, rs.getRow());
         rs.close();
     }
 
-    @Test public void testIsLast1a() throws Exception {
+    @Test
+    public void testIsLast1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // check whether the movement of cursor is successful
         rs.last();
         boolean actual = rs.isLast();
-        assertEquals(true, actual);
+        assertTrue(actual);
 
         // check row number
         assertEquals(5, rs.getRow());
         rs.close();
     }
 
-    @Test public void testLast1a() throws Exception {
+    @Test
+    public void testLast1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // check whether the movement of cursor is successful
         boolean actual = rs.last();
-        assertEquals(true, actual);
+        assertTrue(actual);
 
         // check weather the current row is the last row
         assertEquals(5, rs.getRow());
         rs.close();
     }
 
-    /** normal relative move, only including moving from valid row to valid one */
-    @Test public void testRelative1a() throws Exception {
+    /**
+     * normal relative move, only including moving from valid row to valid one
+     */
+    @Test
+    public void testRelative1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // move to 1st row
@@ -552,29 +599,31 @@ public class TestAllResultsImpl {
         // move to 2nd row
         boolean actual = rs.relative(1);
 
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(2, rs.getRow());
 
         actual = rs.relative(-1);
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(1, rs.getRow());
         rs.close();
     }
 
-    /** normal relative move, including moving from valid row to invalid one */
-    @Test public void testRelative1b() throws Exception {
+    /**
+     * normal relative move, including moving from valid row to invalid one
+     */
+    @Test
+    public void testRelative1b() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // move to 1st row
         rs.next();
         // move to 2nd row
-        boolean actual = rs.relative(1);
-        actual = rs.relative(-1);
+        boolean actual;
 
         // test if move before first
         actual = rs.relative(-3);
         // relative should return false when not on a row
-        assertEquals(false, actual);
+        assertFalse(actual);
         assertEquals(0, rs.getRow());
 
         // test if move after last
@@ -584,13 +633,16 @@ public class TestAllResultsImpl {
         rs.next();
         actual = rs.relative(7);
         // should return false because it's not on a valid row
-        assertEquals(false, actual);
+        assertFalse(actual);
         assertEquals(0, rs.getRow());
         rs.close();
     }
 
-    /** check only moving from an invalid row */
-    @Test public void testRelative1c() throws Exception {
+    /**
+     * check only moving from an invalid row
+     */
+    @Test
+    public void testRelative1c() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // test if move before first will work or not
@@ -601,8 +653,7 @@ public class TestAllResultsImpl {
         } catch (SQLException e) {
 
         }
-        assertEquals(true, rs.isBeforeFirst(),
-                " Should still be before the first row ");
+        assertTrue(rs.isBeforeFirst(), " Should still be before the first row ");
         assertEquals(0, rs.getRow());
 
         try {
@@ -611,8 +662,7 @@ public class TestAllResultsImpl {
         } catch (SQLException e) {
 
         }
-        assertEquals(true, rs.isBeforeFirst(),
-                " Should still be before the first row ");
+        assertTrue(rs.isBeforeFirst(), " Should still be before the first row ");
         assertEquals(0, rs.getRow());
         // test if move after last will work or not
 
@@ -624,8 +674,7 @@ public class TestAllResultsImpl {
         } catch (SQLException e) {
 
         }
-        assertEquals(true, rs.isAfterLast(),
-                " Should still be after the last row. ");
+        assertTrue(rs.isAfterLast(), " Should still be after the last row. ");
         assertEquals(0, rs.getRow());
         try {
             rs.relative(-2);
@@ -633,48 +682,53 @@ public class TestAllResultsImpl {
         } catch (SQLException e) {
 
         }
-        assertEquals(true, rs.isAfterLast(),
-                " Should still be after the last row. ");
+        assertTrue(rs.isAfterLast(), " Should still be after the last row. ");
         assertEquals(0, rs.getRow());
         rs.close();
     }
 
-    /** test only valid row in result set */
-    @Test public void testAbsolute1a() throws Exception {
+    /**
+     * test only valid row in result set
+     */
+    @Test
+    public void testAbsolute1a() throws Exception {
         ResultSetImpl rs = helpGetResultSetImpl(TYPE_SCROLL_SENSITIVE);
 
         // start from beginning
         boolean actual = rs.absolute(1);
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(1, rs.getRow());
 
         actual = rs.absolute(12);
-        assertEquals(false, actual);
+        assertFalse(actual);
         assertEquals(0, rs.getRow());
 
         // start from right after last
         rs.afterLast();
         actual = rs.absolute(-1);
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(5, rs.getRow());
 
         actual = rs.absolute(-2);
-        assertEquals(true, actual);
+        assertTrue(actual);
         assertEquals(4, rs.getRow());
         rs.close();
     }
 
-    /** test only valid row in result set */
-    @Test public void testAbsolute2a() throws Exception {
+    /**
+     * test only valid row in result set
+     */
+    @Test
+    public void testAbsolute2a() throws Exception {
         ResultSetImpl rs = helpGetNoResults(TYPE_SCROLL_SENSITIVE);
 
         // start from beginning
-        assertEquals(false, rs.absolute(1));
+        assertFalse(rs.absolute(1));
         assertEquals(0, rs.getRow());
 
         // start from right after last
         rs.afterLast();
-        assertEquals(false, rs.absolute(-1));
+        assertFalse(rs.absolute(-1));
         assertEquals(0, rs.getRow());
 
         rs.close();
@@ -683,7 +737,8 @@ public class TestAllResultsImpl {
     /**
      * 3 batches
      */
-    @Test public void testMoreResults() throws Exception {
+    @Test
+    public void testMoreResults() throws Exception {
         int fetchSize = 5;
         int batchLength = 4;
         int totalLength = 10;
@@ -700,9 +755,10 @@ public class TestAllResultsImpl {
         }
     }
 
-    @Test public void testResultsMessageException() throws Exception {
-        ResultsMessage resultsMsg = exampleMessage(exampleResults1(1), new String[] { "IntNum" },
-                new String[] { DataTypeManager.DefaultDataTypes.INTEGER });
+    @Test
+    public void testResultsMessageException() throws Exception {
+        ResultsMessage resultsMsg = exampleMessage(exampleResults1(1), new String[]{"IntNum"},
+                new String[]{DataTypeManager.DefaultDataTypes.INTEGER});
         resultsMsg.setFinalRow(-1);
         ResultsMessage next = new ResultsMessage();
         next.setException(new Throwable());
@@ -710,17 +766,17 @@ public class TestAllResultsImpl {
         rf.getResultsReceiver().receiveResults(next);
         when(statement.getDQP().processCursorRequest(0, 2, 0)).thenReturn(rf);
         ResultSetImpl cs = new ResultSetImpl(resultsMsg, statement, null, 2);
-        assertThrows(TeiidSQLException.class, () -> cs.next());
-        assertThrows(TeiidSQLException.class, () -> cs.next());
+        assertThrows(TeiidSQLException.class, cs::next);
+        assertThrows(TeiidSQLException.class, cs::next);
     }
 
     static ResultSetImpl helpTestBatching(StatementImpl statement, final int fetchSize, final int batchLength,
-            final int totalLength) throws TeiidProcessingException, SQLException {
+                                          final int totalLength) throws TeiidProcessingException, SQLException {
         return helpTestBatching(statement, fetchSize, batchLength, totalLength, false);
     }
 
     static ResultSetImpl helpTestBatching(StatementImpl statement, final int fetchSize, final int batchLength,
-            final int totalLength, final boolean partial) throws TeiidProcessingException, SQLException {
+                                          final int totalLength, final boolean partial) throws TeiidProcessingException, SQLException {
         DQP dqp = statement.getDQP();
         if (dqp == null) {
             dqp = mock(DQP.class);
@@ -728,13 +784,13 @@ public class TestAllResultsImpl {
         }
         when(statement.getFetchSize()).thenReturn(fetchSize);
         when(dqp.processCursorRequest(ArgumentMatchers.eq(REQUEST_ID), ArgumentMatchers.anyInt(), ArgumentMatchers.eq(fetchSize))).thenAnswer((Answer<ResultsFuture<ResultsMessage>>) invocation -> {
-            ResultsFuture<ResultsMessage> nextBatch = new ResultsFuture<ResultsMessage>();
-            int begin = Math.min(totalLength, (Integer)invocation.getArguments()[1]);
+            ResultsFuture<ResultsMessage> nextBatch = new ResultsFuture<>();
+            int begin = Math.min(totalLength, (Integer) invocation.getArguments()[1]);
             if (partial && begin == fetchSize + 1) {
-                 begin = begin -5;
+                begin = begin - 5;
             }
             int length = Math.min(fetchSize, Math.min(totalLength - begin + 1, batchLength));
-            nextBatch.getResultsReceiver().receiveResults(exampleResultsMsg4(begin, length, begin + length - 1>= totalLength));
+            nextBatch.getResultsReceiver().receiveResults(exampleResultsMsg4(begin, length, begin + length - 1 >= totalLength));
             return nextBatch;
         });
         int initial = Math.min(fetchSize, batchLength);
@@ -751,20 +807,21 @@ public class TestAllResultsImpl {
         List<Object>[] results = new List[length];
 
         for (int i = 0; i < results.length; i++) {
-            results[i] = new ArrayList<Object>(1);
-            results[i].add(Integer.valueOf(begin + i));
+            results[i] = new ArrayList<>(1);
+            results[i].add(begin + i);
         }
 
         return results;
     }
 
-    private List[] exampleResults2() {
-        List[] results = new List[5];
+    private List<Object>[] exampleResults2() {
+        @SuppressWarnings("unchecked")
+        List<Object>[] results = new List[5];
 
         for (int i = 0; i < results.length; i++) {
-            results[i] = new ArrayList(2);
-            results[i].add(Integer.valueOf(i));
-            results[i].add(new String("a" + i));
+            results[i] = new ArrayList<>(2);
+            results[i].add(i);
+            results[i].add("a" + i);
         }
 
         return results;
@@ -788,20 +845,20 @@ public class TestAllResultsImpl {
             throws SQLException {
         ResultsMessage rsMsg = exampleResultsMsg2();
         statement = TestResultSet.createMockStatement(type);
-        ResultSetImpl rs = new ResultSetImpl(rsMsg, statement);
-        return rs;
+        return new ResultSetImpl(rsMsg, statement);
     }
 
     private ResultSetImpl helpGetNoResults(int type) throws SQLException {
         ResultsMessage rsMsg = exampleResultsMsg3();
         statement = TestResultSet.createMockStatement(type);
-        ResultSetImpl rs = new ResultSetImpl(rsMsg, statement);
-        return rs;
+        return new ResultSetImpl(rsMsg, statement);
     }
 
-    /** without metadata info. */
+    /**
+     * without metadata info.
+     */
     private ResultsMessage exampleResultsMsg1() {
-        return exampleMessage(exampleResults1(5), new String[] { "IntNum" }, new String[] { DataTypeManager.DefaultDataTypes.INTEGER });
+        return exampleMessage(exampleResults1(5), new String[]{"IntNum"}, new String[]{DataTypeManager.DefaultDataTypes.INTEGER});
     }
 
     private ResultsMessage exampleMessage(List<Object>[] results, String[] columnNames, String[] datatypes) {
@@ -817,15 +874,24 @@ public class TestAllResultsImpl {
         return resultsMsg;
     }
 
-    /** without metadata info. */
+    /**
+     * without metadata info.
+     */
     private ResultsMessage exampleResultsMsg2() {
-        return exampleMessage(exampleResults2(), new String[] { "IntNum", "StringNum" }, new String[] { DataTypeManager.DefaultDataTypes.INTEGER, DataTypeManager.DefaultDataTypes.STRING });
+        return exampleMessage(
+                exampleResults2(),
+                new String[]{"IntNum", "StringNum"},
+                new String[]{DataTypeManager.DefaultDataTypes.INTEGER,
+                        DataTypeManager.DefaultDataTypes.STRING}
+        );
     }
 
-    /** with limited metadata info. */
+    /**
+     * with limited metadata info.
+     */
     private ResultsMessage exampleResultsMsg2a() {
         ResultsMessage resultsMsg = exampleResultsMsg2();
-        List[] results = exampleResults2();
+        List<?>[] results = exampleResults2();
         resultsMsg.setDataTypes(dataTypes());
         resultsMsg.setColumnNames(columnNames());
 
@@ -836,19 +902,26 @@ public class TestAllResultsImpl {
         return resultsMsg;
     }
 
-    /** no rows. */
+    /**
+     * no rows.
+     */
     private ResultsMessage exampleResultsMsg3() {
-        return exampleMessage(new List[0], new String[] { "IntNum", "StringNum" }, new String[] { DataTypeManager.DefaultDataTypes.INTEGER, DataTypeManager.DefaultDataTypes.STRING });
+        return exampleMessage(
+                new List[0],
+                new String[]{"IntNum", "StringNum"},
+                new String[]{DataTypeManager.DefaultDataTypes.INTEGER,
+                        DataTypeManager.DefaultDataTypes.STRING}
+        );
     }
 
     static ResultsMessage exampleResultsMsg4(int begin, int length, boolean lastBatch) {
         RequestMessage request = new RequestMessage();
         request.setExecutionId(REQUEST_ID);
         ResultsMessage resultsMsg = new ResultsMessage();
-        List[] results = exampleResults1(length, begin);
+        List<?>[] results = exampleResults1(length, begin);
         resultsMsg.setResults(results);
-        resultsMsg.setColumnNames(new String[] { "IntKey" });
-        resultsMsg.setDataTypes(new String[] { DataTypeManager.DefaultDataTypes.INTEGER });
+        resultsMsg.setColumnNames(new String[]{"IntKey"});
+        resultsMsg.setDataTypes(new String[]{DataTypeManager.DefaultDataTypes.INTEGER});
         resultsMsg.setFirstRow(begin);
         if (lastBatch) {
             resultsMsg.setFinalRow(begin + results.length - 1);
@@ -857,7 +930,8 @@ public class TestAllResultsImpl {
         return resultsMsg;
     }
 
-    @Test public void testNotCallingNext() throws SQLException {
+    @Test
+    public void testNotCallingNext() throws SQLException {
         ResultSetImpl cs = new ResultSetImpl(exampleResultsMsg2a(),
                 statement);
 
@@ -869,13 +943,14 @@ public class TestAllResultsImpl {
         }
     }
 
-    @Test public void testDateType() throws SQLException {
+    @Test
+    public void testDateType() throws SQLException {
         RequestMessage request = new RequestMessage();
         request.setExecutionId(REQUEST_ID);
         ResultsMessage resultsMsg = new ResultsMessage();
-        resultsMsg.setResults(new List[] {Arrays.asList(new Timestamp(0))});
-        resultsMsg.setColumnNames(new String[] { "TS" });
-        resultsMsg.setDataTypes(new String[] { DataTypeManager.DefaultDataTypes.TIMESTAMP });
+        resultsMsg.setResults(new List[]{List.of(new Timestamp(0))});
+        resultsMsg.setColumnNames(new String[]{"TS"});
+        resultsMsg.setDataTypes(new String[]{DataTypeManager.DefaultDataTypes.TIMESTAMP});
         resultsMsg.setFirstRow(1);
         resultsMsg.setFinalRow(1);
         resultsMsg.setLastRow(1);
@@ -890,12 +965,16 @@ public class TestAllResultsImpl {
         assertEquals(new Timestamp(0), rs.getTimestamp(1, Calendar.getInstance(TimeZone.getTimeZone("GMT-05:00"))));
     }
 
-    @Test public void testWasNull() throws SQLException{
-        ResultsMessage message = exampleMessage(new List[] { Arrays.asList((String)null), Arrays.asList("1") }, new String[] { "string" },
-                new String[] { DataTypeManager.DefaultDataTypes.STRING });
+    @Test
+    public void testWasNull() throws SQLException {
+        ResultsMessage message = exampleMessage(
+                new List[]{Collections.singletonList((String) null), List.of("1")},
+                new String[]{"string"},
+                new String[]{DataTypeManager.DefaultDataTypes.STRING}
+        );
         ResultSetImpl rs = new ResultSetImpl(message, statement);
         assertTrue(rs.next());
-        assertEquals(Boolean.FALSE.booleanValue(), rs.getBoolean(1));
+        assertFalse(rs.getBoolean(1));
         assertTrue(rs.wasNull());
         assertEquals(0, rs.getShort(1));
         assertTrue(rs.wasNull());
@@ -915,22 +994,23 @@ public class TestAllResultsImpl {
         assertFalse(rs.next());
     }
 
-    @Test public void testGetters() throws SQLException{
+    @Test
+    public void testGetters() throws SQLException {
         TimeZone.setDefault(TimeZone.getTimeZone("GMT-05:00"));
-        ResultsMessage message = exampleMessage(new List[] { Arrays.asList(1, TimestampUtil.createTime(0, 0, 0), TimestampUtil.createDate(1, 1, 1), TimestampUtil.createTimestamp(1, 1, 1, 1, 1, 1, 1), "<root/>") },
-                new String[] { "int", "time", "date", "timestamp", "sqlxml" },
-                new String[] { DataTypeManager.DefaultDataTypes.INTEGER, DataTypeManager.DefaultDataTypes.TIME, DataTypeManager.DefaultDataTypes.DATE, DataTypeManager.DefaultDataTypes.TIMESTAMP, DataTypeManager.DefaultDataTypes.STRING });
+        ResultsMessage message = exampleMessage(new List[]{Arrays.asList(1, TimestampUtil.createTime(0, 0, 0), TimestampUtil.createDate(1, 1, 1), TimestampUtil.createTimestamp(1, 1, 1, 1, 1, 1, 1), "<root/>")},
+                new String[]{"int", "time", "date", "timestamp", "sqlxml"},
+                new String[]{DataTypeManager.DefaultDataTypes.INTEGER, DataTypeManager.DefaultDataTypes.TIME, DataTypeManager.DefaultDataTypes.DATE, DataTypeManager.DefaultDataTypes.TIMESTAMP, DataTypeManager.DefaultDataTypes.STRING});
         TimestampWithTimezone.resetCalendar(TimeZone.getTimeZone("GMT-06:00"));
         ResultSetImpl rs = new ResultSetImpl(message, statement);
         assertTrue(rs.next());
-        assertEquals(Boolean.TRUE.booleanValue(), rs.getBoolean(1));
+        assertTrue(rs.getBoolean(1));
         assertEquals(1, rs.getShort(1));
         assertEquals(1, rs.getInt(1));
         assertEquals(1L, rs.getLong(1));
         assertEquals(1f, rs.getFloat(1), 0);
         assertEquals(1d, rs.getDouble(1), 0);
         assertEquals("1", rs.getString(1));
-        assertEquals(Integer.valueOf(1), rs.getObject(1));
+        assertEquals(1, rs.getObject(1));
         //the mock statement is in GMT-6 the server results are from GMT-5, so we expect them to display the same
         assertEquals(TimestampUtil.createTime(0, 0, 0), rs.getTime(2));
         assertEquals(TimestampUtil.createDate(1, 1, 1), rs.getDate(3));
